--- a/daftish/static/daft.css
+++ b/daftish/static/daft.css
@@ -189,6 +189,17 @@ input.searchfield:focus {
     overflow: auto;
 }
 
+.context {
+    font-size: 0.8em;
+    margin-left: 20px;
+    color: #aaa;
+}
+
+.context .highlighted {
+    color: #888;
+    font-weight: bold;
+}
+
 /* API */
 
 .field-body {
